# Onion

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: evaluator.rs  main.rs  onionret.rs  reader.rs
src/builtin/: assert.rs  boolean.rs  load_file.rs  math.rs  mod.rs  print.rs  utils.rs
tests/: assert.scm  boolean-test.scm  fibo.scm  math.scm
